Border doesn't show when linear gradient and border radius are set https://bugs.webkit.org/show_bug.cgi?id=285300 rdar://142617573

Reviewed by Alan Baradlay.

The BleedAvoidance::BackgroundOverBorder logic fixes edge antialiasing issues by painting the border first,
and then painting a clipped background over the top. This worked for solid color backgrounds, where
`BackgroundPainter::paintFillLayer()` filled the inner shape, but did not work for opaque image backgrounds
(like opaque gradients, or opaque images like JPEG). To fix that, we need to clip to the padding box before
painting the background.

* LayoutTests/fast/backgrounds/opaque-background-bleed-avoidance-expected.html: Added.
* LayoutTests/fast/backgrounds/opaque-background-bleed-avoidance.html: Added.
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintFillLayer const):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::determineBleedAvoidance const):

Canonical link: https://commits.webkit.org/289101@main